--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Raaya Social</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Google Fonts - Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -23,8 +30,9 @@
           <li>White level</li>
         </ul>
       </div>
-      <div>
-        
+      <div id="right-nav">
+        <button id="login-button">Login</button>
+        <button id="book-demo-button">Book a demo</button>
       </div>
     </nav>
     <!-- Header Section End -->
