[banner ] style design

--- a/index.html
+++ b/index.html
@@ -32,9 +32,38 @@
       </div>
       <div id="right-nav">
         <button id="login-button">Login</button>
-        <button id="book-demo-button">Book a demo</button>
+        <button class="book-demo-button">Book a demo</button>
       </div>
     </nav>
+
+    <!-------------------------------- Banner Section -------------------------->
+    <section id="banner-section">
+      <div id="banner-content">
+        <!-- Banner Content -->
+        <div>
+          <div class="banner-icon-container">
+            <div class="banner-star-icon"></div>
+            <p>All talents across the world</p>
+          </div>
+          <h3 class="banner-title">
+            Create <span class="banner-title-gradient">Short-From</span>
+            <span class="banner-title-gradient">Video Content</span> starting at
+            <span class="price">$99</span>/month.
+          </h3>
+          <p class="banner-paragraph">
+            Tailored social media content of the highest quality, crafted for
+            your business. Shared on your channels only upon your approval.
+          </p>
+          <div>
+            <button class="primary-button">Get started</button>
+            <button class="banner-book-button">Book a demo</button>
+          </div>
+        </div>
+        <!-- Banner Images -->
+        <div></div>
+      </div>
+    </section>
+
     <!-- Header Section End -->
 
     <!-- Start Main Body Content -->
