[design] banner icons container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header Section Start -->
     <nav>
       <div>
-        <img src="/assets/images/logo.png" alt="" />
+        <img src="/assets/images/logo.png" alt="Website logo" />
       </div>
       <div>
         <ul>
@@ -40,7 +40,7 @@
     <section id="banner-section">
       <div id="banner-content">
         <!-- Banner Content -->
-        <div>
+        <div id="banner-texts">
           <div class="banner-icon-container">
             <div class="banner-star-icon"></div>
             <p>All talents across the world</p>
@@ -54,13 +54,63 @@
             Tailored social media content of the highest quality, crafted for
             your business. Shared on your channels only upon your approval.
           </p>
-          <div>
+          <div id="banner-buttons">
             <button class="primary-button">Get started</button>
             <button class="banner-book-button">Book a demo</button>
           </div>
         </div>
         <!-- Banner Images -->
-        <div></div>
+        <div>
+          <div id="banner-images">
+            <img
+              class="banner-img"
+              src="/assets/images/banner1.png"
+              alt="Banner Image"
+            />
+            <img
+              class="banner-img"
+              src="/assets/images/banner1.png"
+              alt="Banner Image"
+            />
+          </div>
+          <div id="social-icn-container">
+            <div id="social-icons-container">
+              <p id="social-icn-title">Social channel we work with</p>
+              <div id="social-icons">
+                <img
+                  class="social-icon"
+                  src="/assets/icons/instagram.png"
+                  alt=""
+                />
+                <img
+                  class="social-icon"
+                  src="/assets/icons/facebook.png"
+                  alt=""
+                />
+                <img
+                  class="social-icon"
+                  src="/assets/icons/twitter.png"
+                  alt=""
+                />
+                <img
+                  class="social-icon"
+                  src="/assets/icons/youtube.png"
+                  alt=""
+                />
+                <img
+                  class="social-icon"
+                  src="/assets/icons/linkedin.png"
+                  alt=""
+                />
+                <img
+                  class="social-icon"
+                  src="/assets/icons/linkedin.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
