[create] client features section

--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
         <!-- Banner Content -->
         <div id="banner-texts">
           <div class="banner-icon-container">
-            <div class="banner-star-icon"></div>
-            <p>All talents across the world</p>
+            <div class="banner-star-icon"><div id="star"></div></div>
+            <p id="star-title">All talents across the world</p>
           </div>
-          <h3 class="banner-title">
-            Create <span class="banner-title-gradient">Short-From</span>
-            <span class="banner-title-gradient">Video Content</span> starting at
-            <span class="price">$99</span>/month.
-          </h3>
-          <p class="banner-paragraph">
-            Tailored social media content of the highest quality, crafted for
-            your business. Shared on your channels only upon your approval.
-          </p>
+          <div id="banner-text-container">
+            <h3 class="banner-title">
+              Create <span class="banner-title-gradient">Short-From</span>
+              <span class="banner-title-gradient">Video Content</span> starting
+              at <span class="price">$99</span>/month.
+            </h3>
+            <p class="banner-paragraph">
+              Tailored social media content of the highest quality, crafted for
+              your business. Shared on your channels only upon your approval.
+            </p>
+          </div>
           <div id="banner-buttons">
             <button class="primary-button">Get started</button>
             <button class="banner-book-button">Book a demo</button>
@@ -117,7 +119,42 @@
     <!-- Header Section End -->
 
     <!-- Start Main Body Content -->
-    <main></main>
+    <main>
+      <!-- ------------------------- Our Client Section ------------------------- -->
+      <section id="our-clients-features">
+        <div id="our-clients">
+          <div>
+            <h3 id="client-quantity">50+</h3>
+            <p id="client-title">Our clients are featured in</p>
+          </div>
+          <div id="divider"></div>
+          <div id="client-company-logos">
+            <div class="logo-marquee" id="logo-container">
+              <div class="company-logo">
+                <img src="/assets/icons/Logomark.png" alt="" />
+                <img src="/assets/icons/Logotype.png" alt="" />
+              </div>
+              <div class="company-logo">
+                <img src="/assets/icons/lightbocicon.png" alt="" />
+                <img src="/assets/icons/lighttypo.png" alt="" />
+              </div>
+              <div class="company-logo">
+                <img src="/assets/icons/featherdev.png" alt="" />
+                <img src="/assets/icons/feathertypo.png" alt="" />
+              </div>
+              <div class="company-logo">
+                <img src="/assets/icons/super.png" alt="" />
+                <img src="/assets/icons/supertypo.png" alt="" />
+              </div>
+              <div class="company-logo">
+                <img src="/assets/icons/gb.png" alt="" />
+                <img src="/assets/icons/gb-typo.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- End Main Body Content -->
 
     <!-- Footer Section -->
