[created] a faq section with fully functional

--- a/index.html
+++ b/index.html
@@ -954,6 +954,60 @@
           </div>
         </div>
       </section>
+
+      <!----------------------------------------------------->
+      <!-------------- FAQ Sections ------------->
+      <section id="faq-sections">
+        <div class="faq-container">
+          <div>
+            <div class="section-title">
+              Frequently asked <span class="section-color">questions</span>
+            </div>
+            <p class="faq-subtext">
+              If you have any questions that aren't listed below, feel free to
+              schedule a demo to speak with someone from our team.
+            </p>
+          </div>
+          <div style="margin-top: 40px"></div>
+          <div class="faq-item">
+            <div class="faq-question">
+              What cars do you have in your inventory?
+            </div>
+            <div class="faq-answer">
+              Lorem ipsum dolor sit amet consectetur. Integer facilisi sit
+              tortor lobortis amet. Risus vestibulum nec fringilla sed in
+              tincidunt tempus porta.
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              What cars do you have in your inventory?
+            </div>
+            <div class="faq-answer">
+              Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              What cars do you have in your inventory?
+            </div>
+            <div class="faq-answer">
+              Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question">
+              What cars do you have in your inventory?
+            </div>
+            <div class="faq-answer">
+              Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- End Main Body Content -->
 
