[create a ] footer layout

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,13 @@
     <!-- End Main Body Content -->
 
     <!-- Footer Section -->
-    <footer></footer>
+    <footer>
+      <div id="footer-container">
+        <div id="main-columns-container">
+
+        </div>
+      </div>
+    </footer>
     <!-- Connect JavaScript -->
     <script src="/script.js"></script>
   </body>
