[create] footer section compleatly

--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,87 @@
     <footer>
       <div id="footer-container">
         <div id="main-columns-container">
-
+          <!-- logo section -->
+          <div>
+            <div id="footer-logo-section">
+              <h2>Logo</h2>
+              <h4>About us</h4>
+              <p>
+                Raaya Social takes care of your social media posts for a flat
+                monthly price. Quality content, posted to all your social media
+                channels. Take your socials to the next level:
+              </p>
+              <div id="footer-buttons">
+                <button id="login-button">Log in</button>
+                <button class="primary-button">Book a demo</button>
+              </div>
+            </div>
+          </div>
+          <!-- Footer Quick Links -->
+          <div id="footer-routes">
+            <div class="quick-links">
+              <h4>Quick Links</h4>
+              <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Pricing</li>
+                <li>Reviews</li>
+                <li>Portfolio</li>
+              </ul>
+            </div>
+            <div class="quick-links">
+              <h4>Services</h4>
+              <ul>
+                <li>Social media management</li>
+                <li>Short - form video content</li>
+                <li>Email design</li>
+                <li>Blog post</li>
+              </ul>
+            </div>
+          </div>
+          <!-- Footer Contact Section -->
+          <div>
+            <div id="contact-section">
+              <div id="contact-container">
+                <h4>Contact us</h4>
+                <div id="form-container">
+                  <input
+                    id="email-input"
+                    type="email"
+                    placeholder="Email address"
+                  />
+                  <input
+                    type="text"
+                    name="phoneNumber"
+                    id="phone-number"
+                    placeholder="Phone number"
+                  />
+                  <textarea
+                    name=""
+                    id="textarea"
+                    placeholder="Write Your Say"
+                  ></textarea>
+                </div>
+                <div class="submit-button-container">
+                  <button>Submit</button>
+                  <img src="/assets/icons/arrow-right.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Footer section -->
+        <div class="footer-section">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="1190"
+            height="2"
+            viewBox="0 0 1190 2"
+            fill="none"
+          >
+            <path d="M0 1L1190 0.999896" stroke="#D0D5DD" />
+            <p>© 2024 TaxDax. All rights reserved.</p>
+          </svg>
         </div>
       </div>
     </footer>
