[compleate] testimonial section

--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,129 @@
                   </div>
                 </div>
               </div>
+              <!-- Testimonial container -->
+              <div id="testimonial-container">
+                <div class="client-testimonial">
+                  <div class="user-info-card">
+                    <img src="/assets/images/person.jpg" alt="" />
+                    <div class="user-details">
+                      <div class="user-name">
+                        <h3>Andrei Kasyanau</h3>
+                        <p>CEO at Glorium Technologies</p>
+                      </div>
+                      <div class="review-rating-box">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="25"
+                          height="24"
+                          viewBox="0 0 25 24"
+                          fill="none"
+                        >
+                          <path
+                            d="M12.0667 17.2698L16.2167 19.7798C16.9767 20.2398 17.9067 19.5598 17.7067 18.6998L16.6067 13.9798L20.2767 10.7998C20.9467 10.2198 20.5867 9.11977 19.7067 9.04977L14.8767 8.63977L12.9867 4.17977C12.6467 3.36977 11.4867 3.36977 11.1467 4.17977L9.25672 8.62977L4.42672 9.03977C3.54672 9.10977 3.18672 10.2098 3.85672 10.7898L7.52672 13.9698L6.42672 18.6898C6.22672 19.5498 7.15672 20.2298 7.91672 19.7698L12.0667 17.2698Z"
+                            fill="#344054"
+                          />
+                        </svg>
+                        <p>(4.8)</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="say-testimonial">
+                    <div class="comma">
+                      <img src="/assets/images/comma.jpg" alt="" />
+                    </div>
+                    <p>
+                      Our smart developers build innovative, efficient, and
+                      high- performance solutions. efficient, and high-
+                      performance solutions. efficient, and high- performance
+                      solutions.
+                    </p>
+                    <div class="comma-two">
+                      <img src="/assets/images/comma2.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
+                <div class="client-testimonial">
+                  <div class="user-info-card">
+                    <img src="/assets/images/person.jpg" alt="" />
+                    <div class="user-details">
+                      <div class="user-name">
+                        <h3>Andrei Kasyanau</h3>
+                        <p>CEO at Glorium Technologies</p>
+                      </div>
+                      <div class="review-rating-box">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="25"
+                          height="24"
+                          viewBox="0 0 25 24"
+                          fill="none"
+                        >
+                          <path
+                            d="M12.0667 17.2698L16.2167 19.7798C16.9767 20.2398 17.9067 19.5598 17.7067 18.6998L16.6067 13.9798L20.2767 10.7998C20.9467 10.2198 20.5867 9.11977 19.7067 9.04977L14.8767 8.63977L12.9867 4.17977C12.6467 3.36977 11.4867 3.36977 11.1467 4.17977L9.25672 8.62977L4.42672 9.03977C3.54672 9.10977 3.18672 10.2098 3.85672 10.7898L7.52672 13.9698L6.42672 18.6898C6.22672 19.5498 7.15672 20.2298 7.91672 19.7698L12.0667 17.2698Z"
+                            fill="#344054"
+                          />
+                        </svg>
+                        <p>(4.8)</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="say-testimonial">
+                    <div class="comma">
+                      <img src="/assets/images/comma.jpg" alt="" />
+                    </div>
+                    <p>
+                      Our smart developers build innovative, efficient, and
+                      high- performance solutions. efficient, and high-
+                      performance solutions. efficient, and high- performance
+                      solutions.
+                    </p>
+                    <div class="comma-two">
+                      <img src="/assets/images/comma2.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
+                <div class="client-testimonial">
+                  <div class="user-info-card">
+                    <img src="/assets/images/person.jpg" alt="" />
+                    <div class="user-details">
+                      <div class="user-name">
+                        <h3>Andrei Kasyanau</h3>
+                        <p>CEO at Glorium Technologies</p>
+                      </div>
+                      <div class="review-rating-box">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="25"
+                          height="24"
+                          viewBox="0 0 25 24"
+                          fill="none"
+                        >
+                          <path
+                            d="M12.0667 17.2698L16.2167 19.7798C16.9767 20.2398 17.9067 19.5598 17.7067 18.6998L16.6067 13.9798L20.2767 10.7998C20.9467 10.2198 20.5867 9.11977 19.7067 9.04977L14.8767 8.63977L12.9867 4.17977C12.6467 3.36977 11.4867 3.36977 11.1467 4.17977L9.25672 8.62977L4.42672 9.03977C3.54672 9.10977 3.18672 10.2098 3.85672 10.7898L7.52672 13.9698L6.42672 18.6898C6.22672 19.5498 7.15672 20.2298 7.91672 19.7698L12.0667 17.2698Z"
+                            fill="#344054"
+                          />
+                        </svg>
+                        <p>(4.8)</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="say-testimonial">
+                    <div class="comma">
+                      <img src="/assets/images/comma.jpg" alt="" />
+                    </div>
+                    <p>
+                      Our smart developers build innovative, efficient, and
+                      high- performance solutions. efficient, and high-
+                      performance solutions. efficient, and high- performance
+                      solutions.
+                    </p>
+                    <div class="comma-two">
+                      <img src="/assets/images/comma2.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
             </data>
           </div>
         </div>
